Scrollable and the number 1 stays on top. We had to detach the header because it was causing issues with the z-index

--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@ nav{
 }
 
 main {
-  width: 40rem;
-  height: 64rem;
+  width: 42rem;
+  height: 33rem;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 5px 15px 8px #e4e7fb;
   box-shadow: 0px 5px 15px 8px #e4e7fb;
@@ -31,32 +31,45 @@ main {
   border-radius: 0.5rem;
   margin-left: auto;
   margin-right: auto;
+  overflow-y: auto;
 }
 
-.main-header {
-  width: 100%;
+.main-header{
+  width: 42rem;
+  height: 7rem;
+  background-color: white;
+  -webkit-box-shadow: 0px 2px 8px 5px #e4e7fb;
+  box-shadow: 0px 2px 8px 5px #e4e7fb;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 1.5rem 1rem;
-  color: #264c77;
-  font-family:'Courier New', Courier, monospace;
+  border-radius: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
+}
+
+.h1-title{
+  padding: 1.3rem;
+  color: #141a39;
 }
 
 
 .main-leaderboard{
-  width: 100%;
-  position: relative;
+  width: 95%;
+  border-collapse: collapse;
+  color: #141a39;
+  cursor: default;
+  margin: 10px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed;
   color: #141a39;
   cursor: default;
+  position:relative;
 }
-
 
 tr {
   transition: all 0.2s ease-in-out;
@@ -76,6 +89,10 @@ tr:nth-child(odd) {
 
 tr:nth-child(1) {
   color: #fff;
+  background-color: #264c77;
+  position: sticky;
+  top: 2px;
+  z-index: 1;
 }
 
 td {
@@ -120,40 +137,5 @@ td {
 
 .points:first-child {
   width: 10rem;
-}
-
-.ribbon {
-  width: 42rem;
-  height: 6.5rem;
-  top: -0.5rem;
-  background-color: #264c77;
-  position: absolute;
-  left: -1rem;
-  -webkit-box-shadow: 0px 15px 11px -6px #7a7a7d;
-  box-shadow: 0px 15px 11px -6px #7a7a7d;
-}
-
-.ribbon::before {
-  content: "";
-  height: 1.5rem;
-  width: 1.5rem;
-  bottom: -0.8rem;
-  left: 0.35rem;
-  transform: rotate(45deg);
-  background-color: #5c5be5;
-  position: absolute;
-  z-index: -1;
-}
-
-.ribbon::after {
-  content: "";
-  height: 1.5rem;
-  width: 1.5rem;
-  bottom: -0.8rem;
-  right: 0.35rem;
-  transform: rotate(45deg);
-  background-color: #5c5be5;
-  position: absolute;
-  z-index: -1;
 }
 
